# QuantIthaca

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.BAC  devcontainer.json  devcontainer.json.BAC  docker-compose.yml  squid.conf
.streamlit/: config.toml
apps/streamlit/: display.py  init.py  st_main.py
apps/streamlit/pages/: st_rlb_cashflows.py
cpp/src/: bindings.cpp  core.cpp  nb_callback.cpp  nb_callback.h  py_bridge.h  py_calls.h  py_value.h
cpp/src/context/: CMakeLists.txt  graph.cpp  graph.h  graph_key.h  graph_node.h  graph_value.h
cpp/src/context_obj/: dummy_obj.cpp  dummy_obj.h  dummy_obj1.cpp  dummy_obj1.h  graph_key.h  objects.h  py_obj.cpp  py_obj.h
cpp/src/py/: bindings.cpp  graph_builder_trampoline.h  graph_py_factory.cpp  graph_py_factory.h  graph_value_trampoline.h  py_bridge.h  py_calls.h  py_runtime.h
cpp/src/utils/: CMakeLists.txt  containers.h  exception.h  hash.h  heap.h  lockfree_buffer.h  ringbuffer.h  sort.h  threads.cpp  threads.h
docker/: Dockerfile  docker-compose.postgres-test.yml
python/: cpp_callbacks.py
python/graph/: __init__.py  graph_obj_builders.py
python/quantithaca/: __init__.py  db.py  logging.py  sql_write.py
python/quantithaca/finance/: pnl.py  rlb_cashflows.py  tax.py
python/quantithaca/finance.py/: rlb_cashflows.py
python/quantithaca/finance/configs/: allocation.json
python/quantithaca/utils/: __init__.py  dateutils.py  pdf_tables.py
python/research/: 2026-04-03-rlb-transactions.ipynb  2026-06-03-travers-file-system.ipynb
scripts/: build_linux.sh  build_wheels.ps1  build_wheels.sh  build_windows.ps1  docker_build_wheels.sh  streamlit.sh
tests/cpp/: test_core.cpp  test_graph.cpp  test_utils.cpp
tests/python/: conftest.py  test_dateutils.py  test_db.py  test_graph_dummy_py.py  test_graph_py_value.py  test_pdf_tables.py  test_python_api.py  test_sql_write.py
workspace/: CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
workspace/apps/streamlit/: init.py
workspace/cpp/include/: core.hpp
workspace/cpp/src/context/: graph.cpp  graph.h  graph_key.h  graph_value.h  py_obj.cpp  py_obj.h
workspace/cpp/src/context_obj/: dummy_obj.cpp  dummy_obj.h  graph_key.h  i_graph_key.h  key_model.h  objects.h  py_obj.cpp  py_obj.h
workspace/cpp/src/py/: bindings.cpp  graph_builder_trampoline.h  graph_key_caster.h  graph_py_factory.cpp  graph_py_factory.h  graph_value_trampoline.h  nb_callback.h  py_runtime.h
workspace/cpp/src/utils/: CMakeLists.txt  exception.h  hash.h  pointers.h  variants.h
workspace/db/: migrations.sql
workspace/docker/: Dockerfile
workspace/infra/systemd/: README.md  install.sh  quantithaca.service  rclone-onedrive.service
workspace/python/: cpp_callbacks.py
workspace/python/graph/: batch_compute.py
workspace/python/quantithaca/: __init__.py  sql_write.py
workspace/python/quantithaca/finance/: pnl.py  tax.py
workspace/python/quantithaca/utils/: pdf_tables.py
workspace/scripts/: build_linux.sh  build_wheels.sh  docker_build_wheels.sh  streamlit.sh
workspace/tests/cpp/: merge_sort_probe.cpp  test_core.cpp  test_graph.cpp
workspace/tests/python/: test_db.py  test_graph_py_value.py  test_python_api.py  test_sql_write_integration.py
