[build-system]
requires = [
  "scikit-build-core>=0.10.0",
  "nanobind>=2.2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "quantithaca"
version = "0.1.0"
description = "QuantIthaca hybrid Python+C++ project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "QuantIthaca Team" }
]
dependencies = [
    "pandas>=3.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.25"
cmake.build-type = "Release"
wheel.packages = ["python/quantithaca"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
